<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="145dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="314dp"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/teal_200"
            android:text="Message Received"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/display_msg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/button4"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:text="Reply"
            android:onClick="ReplyMessage"
            android:layout_marginTop="350dp"/>

        <EditText
            android:id="@+id/Reply_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>