<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="243dp">

        <TextView
            android:id="@+id/Replay_reached"
            android:layout_width="309dp"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:background="@color/teal_200"
            android:visibility="invisible"
            android:text="Reply Received"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Display_msg"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:textColor="@color/purple_500"
            android:visibility="invisible"
            android:layout_height="56dp"
            android:textSize="25dp"
            android:textStyle="bold|italic"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:text="SEND"
            android:onClick="MessageReceived"
            android:layout_marginTop="350dp"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>